# motiv

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  motiv.desktop  resources.qrc
.github/workflows/: build.yaml  docs.yml
res/: help.md  style.qss
src/: ReaderCallbacks.cpp  ReaderCallbacks.hpp  main.cpp  readercallbacks.cpp  readercallbacks.hpp  types.h  types.hpp  utils.cpp  utils.h  utils.hpp
src/models/: AppSettings.cpp  AppSettings.hpp  Builder.hpp  Filetrace.cpp  Filetrace.hpp  Filter.cpp  Filter.hpp  Range.hpp  Slot.cpp  Slot.hpp  SubTrace.cpp  SubTrace.hpp  TimedElement.hpp  Trace.hpp  TraceTree.cpp  TraceTree.hpp  UITrace.cpp  UITrace.hpp  ViewSettings.cpp  ViewSettings.hpp  blockingp2pcommunication.cpp  blockingp2pcommunication.hpp  builder.hpp  collectivecommunication.cpp  collectivecommunication.hpp  communication.cpp  communication.hpp  filetrace.cpp  filetrace.hpp  nonblockingp2pcommunication.cpp  nonblockingp2pcommunication.hpp  p2pcommunication.cpp  p2pcommunication.hpp  range.hpp  slot.cpp  slot.hpp  subtrace.cpp  subtrace.hpp  trace.cpp  trace.hpp  (+2 more)
src/models/communication/: BlockingP2PCommunicationEvent.cpp  BlockingP2PCommunicationEvent.hpp  BlockingReceivEevent.cpp  BlockingReceivEevent.hpp  BlockingSendEvent.cpp  BlockingSendEvent.hpp  CollectiveCommunicationEvent.cpp  CollectiveCommunicationEvent.hpp  Communication.cpp  Communication.hpp  CommunicationEvent.hpp  CommunicationKind.hpp  NonBlockingP2PCommunicationEvent.cpp  NonBlockingP2PCommunicationEvent.hpp  NonBlockingReceiveEvent.cpp  NonBlockingReceiveEvent.hpp  NonBlockingSendEvent.cpp  NonBlockingSendEvent.hpp  RequestCancelledEvent.cpp  RequestCancelledEvent.hpp  blockingp2pcommunicationevent.cpp  blockingp2pcommunicationevent.hpp  blockingreceiveevent.cpp  blockingreceiveevent.hpp  blockingsendevent.cpp  blockingsendevent.hpp  collectivecommunicationevent.cpp  collectivecommunicationevent.hpp  communication.cpp  communication.hpp  communicationevent.hpp  communicationkind.hpp  nonblockingp2pcommunicationevent.cpp  nonblockingp2pcommunicationevent.hpp  nonblockingreceiveevent.cpp  nonblockingreceiveevent.hpp  nonblockingsendevent.cpp  nonblockingsendevent.hpp  requestcancelledevent.cpp  requestcancelledevent.hpp
src/ui/: Colors.hpp  CommunicationIndicator.cpp  CommunicationIndicator.hpp  Constants.hpp  FilterPopup.cpp  FilterPopup.hpp  MainWindow.cpp  MainWindow.hpp  ScrollSynchronizer.cpp  ScrollSynchronizer.hpp  SlotIndicator.cpp  SlotIndicator.hpp  SlotInformationDock.cpp  SlotInformationDock.hpp  TimeInputField.cpp  TimeInputField.hpp  TimeUnit.cpp  TimeUnit.hpp  TimeUnitLabel.cpp  TimeUnitLabel.hpp  Timeline.cpp  Timeline.hpp  TimelineHeader.cpp  TimelineHeader.hpp  TimelineLabelList.cpp  TimelineLabelList.hpp  TimelineView.cpp  TimelineView.hpp  TraceDataModel.hpp  TraceDataProxy.cpp  TraceDataProxy.hpp  TraceTreeModel.cpp  TraceTreeModel.hpp  TraceTreeView.cpp  TraceTreeView.hpp  ViewSettings.cpp  ViewSettings.hpp  constants.hpp  mainwindow.cpp  mainwindow.hpp  (+1 more)
src/ui/views/: CollectiveCommunicationIndicator.cpp  CollectiveCommunicationIndicator.hpp  CommunicationIndicator.cpp  CommunicationIndicator.hpp  GenericIndicator.cpp  GenericIndicator.hpp  License.cpp  License.hpp  Preview.cpp  Preview.hpp  SelectionDetails.cpp  SettingsModel.cpp  SettingsModel.hpp  SettingsView.cpp  SettingsView.hpp  SlotIndicator.cpp  SlotIndicator.hpp  TimelineView.cpp  TimelineView.hpp  TraceInformationDock.cpp  TraceInformationDock.hpp  TraceList.cpp  TraceList.hpp  TraceListItem.cpp  TraceListItem.hpp  TraceListScene.cpp  TraceListScene.hpp  TraceListSlotItem.cpp  TraceListSlotItem.hpp  TraceListView.cpp  TraceListView.hpp  TraceOverviewTimelineView.cpp  TraceOverviewTimelineView.hpp  license.cpp  license.hpp  preview.cpp  preview.hpp  selectiondetails.cpp  selectiondetails.hpp  tracelist.cpp  (+5 more)
src/ui/widgets/: About.hpp  Help.hpp  InformationDock.cpp  InformationDock.hpp  License.cpp  License.hpp  Preview.cpp  Preview.hpp  SelectionDetails.cpp  SelectionDetails.hpp  SlotInformationDock.hpp  TimeInputField.cpp  TimeInputField.hpp  TimeUnitLabel.cpp  TimeUnitLabel.hpp  Timeline.cpp  Timeline.hpp  TimelineHeader.cpp  TimelineHeader.hpp  TimelineLabelList.cpp  TimelineLabelList.hpp  TraceInformationDock.cpp  TraceInformationDock.hpp  TraceList.cpp  TraceList.hpp  TraceListItem.cpp  TraceListItem.hpp  TraceOverviewDock.cpp  TraceOverviewDock.hpp
src/ui/widgets/infostrategies/: InformationDockCollectiveCommunicationStrategy.cpp  InformationDockCollectiveCommunicationStrategy.hpp  InformationDockCommunicationStrategy.cpp  InformationDockCommunicationStrategy.hpp  InformationDockElementBaseStrategy.cpp  InformationDockElementBaseStrategy.hpp  InformationDockElementStrategy.hpp  InformationDockSlotStrategy.cpp  InformationDockSlotStrategy.hpp  InformationDockTraceStrategy.cpp  InformationDockTraceStrategy.hpp
src/ui/windows/: FilterPopup.cpp  FilterPopup.hpp  MainWindow.cpp  MainWindow.hpp  Otf2FileDialog.cpp  Otf2FileDialog.hpp  RecentFilesDialog.cpp  RecentFilesDialog.hpp  initial.hpp  mainwindow.cpp  mainwindow.hpp
src/util/: LongLongValidator.cpp  LongLongValidator.hpp
